Verify against a keyring the build assembles, and two smaller signature fixes (#86)
* Name the key a build needs, not only the one gpg could not find

A missing key was reported as gpg reports it, by the 16-hex key id read off the
signature. That is not what anyone has to go and fetch: the fingerprint to look
up, and to check against the upstream project's published keys, is the one the
@jenesis.signature line already declares - which the step knows and did not say.

Each such violation now names the declared fingerprint beside the key id gpg
missed, so a run that stops for want of keys lists exactly what to import, for
every coordinate at once rather than one per run, and for keys declared inline
as well as in a signature-<name>.properties list.

NO_PUBKEY also went back to overriding the generic ERRSIG line that precedes it
in the same status stream, which a refactor here had turned into the weaker of
the two messages.

* Prove a keyring can be named without an environment variable

Selecting which keyring verification reads meant exporting GNUPGHOME, which is
ambient state a project cannot commit and a script has to remember to set. The
step already forks through ProcessBuildStep, so process-gpg.properties reaches
it like any other tool's arguments, and --homedir arrives as a pair.

A real-gpg test pins that: with the line, verification passes against a keyring
only that file names; with the line removed, the same build fails for want of
the key, so the test cannot pass by accident.

* Let a reviewed exception stand in for a signature nobody publishes

Under strict, a coordinate that publishes no signature fails, and there was no
way to say that this particular one had been looked at and accepted. One such
dependency therefore cost a tree the whole mode, which is the mode worth having:
the rest of the closure goes back to being verified on trust.

A fingerprint of none, written OpenPGP/none, declares exactly that. It is an
ordinary declaration, so the coordinate 